--- a/projects/fantatic/catalog.html
+++ b/projects/fantatic/catalog.html
@@ -148,7 +148,7 @@
             <ul>
               <li><a href="#">Каталог</a></li>
               <li><a href="#">Новый год</a></li>
-              <li><a href="#">Подарки с юмором</a></li>
+              <li><span>Подарки с юмором</span></li>
             </ul>
           </div>
           <div class="t-sidesWrappper">
