--- a/projects/fantatic/goodsOrder.html
+++ b/projects/fantatic/goodsOrder.html
@@ -141,14 +141,14 @@
           </ul>
         </div>
       </header>
-      <main>
+      <main class="t-mediaClassCtrl">
         <section class="t-goodsOrderWrapper t-mainContainerSection">
           <h2 class="t-sectionTitle"> Подарки с юмором</h2>
           <div class="t-breadCrumbs">
             <ul>
               <li><a href="#">Каталог</a></li>
               <li>-<a href="#">Новый год</a></li>
-              <li>-<a href="#">Подарки с юмором</a></li>
+              <li>-<span>Подарки с юмором</span></li>
             </ul>
           </div>
           <div class="t-aboutGoodsCard t-GoodsCardMain">
