--- a/projects/fantatic/guarantee.html
+++ b/projects/fantatic/guarantee.html
@@ -141,15 +141,9 @@
           </ul>
         </div>
       </header>
-      <main>
+      <main class="t-mediaClassCtrl">
         <section class="t-guarantee t-mainContainerSection">
           <h2 class="t-sectionTitle"> Подарки с юмором</h2>
-          <div class="t-breadCrumbs">
-            <ul>
-              <li><a href="#">Главная</a></li>
-              <li><a href="#">Гарантия</a></li>
-            </ul>
-          </div>
           <div class="t-standartMainContainer">
             <h3>Условия гарантийного обслуживания</h3>
             <p>Все условия гарантийного обслуживания, обмена и возврата товара применимы к товарам, приобретенным в розничной сети, интернет-магазине и электронном каталоге.</p><br><br>
@@ -165,38 +159,7 @@
             <p>Все условия гарантийного обслуживания, обмена и возврата товара применимы к товарам, приобретенным в розничной сети, интернет-магазине и электронном каталоге.</p><br>
           </div>
         </section>
-        <section class="t-bottomInfo">
-          <div class="t-bottomInfoCardsHolder">
-            <div class="t-bottomInfoCard">
-              <div class="t-bottomInfoCardImage"><img src="/images/bottominfo/wallet.png"/></div>
-              <div class="t-bottomInfoCardInfo">
-                <h3 class="t-bottomInfoCardTitle">Оплата</h3>
-                <p class="t-bottomInfoCardDescription">Несколько вариантов оплаты, в том числе и оплата электронными деньгами</p>
-              </div>
-            </div>
-            <div class="t-bottomInfoCard">
-              <div class="t-bottomInfoCardImage"><img src="/images/bottominfo/rocket.png"/></div>
-              <div class="t-bottomInfoCardInfo">
-                <h3 class="t-bottomInfoCardTitle">Доставка</h3>
-                <p class="t-bottomInfoCardDescription">Несколько вариантов доставки на ваш выбор или самомвывоз</p>
-              </div>
-            </div>
-            <div class="t-bottomInfoCard">
-              <div class="t-bottomInfoCardImage"><img src="/images/bottominfo/guarantee.png"/></div>
-              <div class="t-bottomInfoCardInfo">
-                <h3 class="t-bottomInfoCardTitle">Гарантия</h3>
-                <p class="t-bottomInfoCardDescription">Несколько вариантов оплаты, в том числе и оплата электронными деньгами</p>
-              </div>
-            </div>
-            <div class="t-bottomInfoCard">
-              <div class="t-bottomInfoCardImage"><img src="/images/bottominfo/tools.png"/></div>
-              <div class="t-bottomInfoCardInfo">
-                <h3 class="t-bottomInfoCardTitle">Ремонт</h3>
-                <p class="t-bottomInfoCardDescription">Проверим устройство на неисправность и отремонтируем</p>
-              </div>
-            </div>
-          </div>
-        </section>
+        <section class="t-bottomInfo"></section>
       </main>
       <footer id="footer">
         <div class="t-moonGradient"></div>
