--- a/projects/fantatic/questions.html
+++ b/projects/fantatic/questions.html
@@ -141,7 +141,7 @@
           </ul>
         </div>
       </header>
-      <main>
+      <main class="t-mediaClassCtrl">
         <section class="t-questionsAndAnswers t-mainContainerSection">
           <h2 class="t-sectionTitle"> Вопросы и ответы</h2>
           <div class="t-standartMainContainer">
