--- a/projects/fantatic/cart.html
+++ b/projects/fantatic/cart.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/css/main.min.css">
     <link rel="stylesheet" href="/css/plugins/owl.carousel.min.css">
     <link rel="stylesheet" href="/css/plugins/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/css/plugins/jquery.formstyler.css">
+    <link rel="stylesheet" href="/css/plugins/jquery.formstyler.theme.css">
     <link rel="stylesheet" href="/css/plugins/magnific-popup.css">
   </head>
   <body class="t-windowLoading fixed t-animeOne">
@@ -141,8 +143,8 @@
           </ul>
         </div>
       </header>
-      <main>
-        <section class="t-mainContainerSection">
+      <main class="t-mediaClassCtrl">
+        <section class="t-cartSection t-mainContainerSection">
           <h2 class="t-sectionTitle"> Корзина</h2>
           <div class="t-breadCrumbs">
             <ul>
@@ -199,105 +201,74 @@
             </div>
             <div class="t-cartGoodsListBodyOutput">
               <div class="t-cartGoodsCard">
-                <div class="t-cardInsideBlock"><img src="/images/goodimage.png" class="t-cartItemImage"/><span class="t-cartItemName">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</span></div>
-                <div class="t-cardInsideBlock"><span class="t-bold t-cartItemPrice">32 500<span class="t-bold t-rubSign">₽</span></span></div>
-                <div class="t-cardInsideBlock">
+                <div class="t-cardInsideBlock t-cardImgAndNameSection"><img src="/images/goodimage.png" class="t-cartItemImage"/><span class="t-cartItemName">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</span></div>
+                <div class="t-cardInsideBlock t-cartItemPriceOneSection"><span class="t-bold t-cartItemPrice">32 500<span class="t-bold t-rubSign">₽</span></span></div>
+                <div class="t-cardInsideBlock t-cardQuantitySection">
                   <div class="t-quantityItemCtrl">
                     <button class="t-quantityBtn t-quantityDown"></button>
                     <input value="10" class="t-quantityInput"/>
                     <button class="t-quantityBtn t-quantityUp"></button>
                   </div>
                 </div>
-                <div class="t-cardInsideBlock"><span class="t-bold t-itemTotalPrice">325 000<span class="t-bold t-rubSign">₽</span></span></div>
-                <div class="t-cardInsideBlock"><span class="t-removeFromCartBtn t-smallCloseBtn"></span></div>
+                <div class="t-cardInsideBlock t-cartItemPriceTotalSection"><span class="t-bold t-itemTotalPrice">325 000<span class="t-bold t-rubSign">₽</span></span></div>
+                <div class="t-cardInsideBlock t-cartCloseSection"><span class="t-removeFromCartBtn t-smallCloseBtn"></span></div>
               </div>
               <div class="t-cartGoodsCard">
-                <div class="t-cardInsideBlock"><img src="/images/goodimage.png" class="t-cartItemImage"/><span class="t-cartItemName">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</span></div>
-                <div class="t-cardInsideBlock"><span class="t-bold t-cartItemPrice">32 500<span class="t-bold t-rubSign">₽</span></span></div>
-                <div class="t-cardInsideBlock">
+                <div class="t-cardInsideBlock t-cardImgAndNameSection"><img src="/images/goodimage.png" class="t-cartItemImage"/><span class="t-cartItemName">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</span></div>
+                <div class="t-cardInsideBlock t-cartItemPriceOneSection"><span class="t-bold t-cartItemPrice">32 500<span class="t-bold t-rubSign">₽</span></span></div>
+                <div class="t-cardInsideBlock t-cardQuantitySection">
                   <div class="t-quantityItemCtrl">
                     <button class="t-quantityBtn t-quantityDown"></button>
                     <input value="10" class="t-quantityInput"/>
                     <button class="t-quantityBtn t-quantityUp"></button>
                   </div>
                 </div>
-                <div class="t-cardInsideBlock"><span class="t-bold t-itemTotalPrice">325 000<span class="t-bold t-rubSign">₽</span></span></div>
-                <div class="t-cardInsideBlock"><span class="t-removeFromCartBtn t-smallCloseBtn"></span></div>
+                <div class="t-cardInsideBlock t-cartItemPriceTotalSection"><span class="t-bold t-itemTotalPrice">325 000<span class="t-bold t-rubSign">₽</span></span></div>
+                <div class="t-cardInsideBlock t-cartCloseSection"><span class="t-removeFromCartBtn t-smallCloseBtn"></span></div>
               </div>
               <div class="t-cartGoodsCard">
-                <div class="t-cardInsideBlock"><img src="/images/goodimage.png" class="t-cartItemImage"/><span class="t-cartItemName">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</span></div>
-                <div class="t-cardInsideBlock"><span class="t-bold t-cartItemPrice">32 500<span class="t-bold t-rubSign">₽</span></span></div>
-                <div class="t-cardInsideBlock">
+                <div class="t-cardInsideBlock t-cardImgAndNameSection"><img src="/images/goodimage.png" class="t-cartItemImage"/><span class="t-cartItemName">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</span></div>
+                <div class="t-cardInsideBlock t-cartItemPriceOneSection"><span class="t-bold t-cartItemPrice">32 500<span class="t-bold t-rubSign">₽</span></span></div>
+                <div class="t-cardInsideBlock t-cardQuantitySection">
                   <div class="t-quantityItemCtrl">
                     <button class="t-quantityBtn t-quantityDown"></button>
                     <input value="10" class="t-quantityInput"/>
                     <button class="t-quantityBtn t-quantityUp"></button>
                   </div>
                 </div>
-                <div class="t-cardInsideBlock"><span class="t-bold t-itemTotalPrice">325 000<span class="t-bold t-rubSign">₽</span></span></div>
-                <div class="t-cardInsideBlock"><span class="t-removeFromCartBtn t-smallCloseBtn"></span></div>
+                <div class="t-cardInsideBlock t-cartItemPriceTotalSection"><span class="t-bold t-itemTotalPrice">325 000<span class="t-bold t-rubSign">₽</span></span></div>
+                <div class="t-cardInsideBlock t-cartCloseSection"><span class="t-removeFromCartBtn t-smallCloseBtn"></span></div>
               </div>
               <div class="t-cartGoodsCard">
-                <div class="t-cardInsideBlock"><img src="/images/goodimage.png" class="t-cartItemImage"/><span class="t-cartItemName">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</span></div>
-                <div class="t-cardInsideBlock"><span class="t-bold t-cartItemPrice">32 500<span class="t-bold t-rubSign">₽</span></span></div>
-                <div class="t-cardInsideBlock">
+                <div class="t-cardInsideBlock t-cardImgAndNameSection"><img src="/images/goodimage.png" class="t-cartItemImage"/><span class="t-cartItemName">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</span></div>
+                <div class="t-cardInsideBlock t-cartItemPriceOneSection"><span class="t-bold t-cartItemPrice">32 500<span class="t-bold t-rubSign">₽</span></span></div>
+                <div class="t-cardInsideBlock t-cardQuantitySection">
                   <div class="t-quantityItemCtrl">
                     <button class="t-quantityBtn t-quantityDown"></button>
                     <input value="10" class="t-quantityInput"/>
                     <button class="t-quantityBtn t-quantityUp"></button>
                   </div>
                 </div>
-                <div class="t-cardInsideBlock"><span class="t-bold t-itemTotalPrice">325 000<span class="t-bold t-rubSign">₽</span></span></div>
-                <div class="t-cardInsideBlock"><span class="t-removeFromCartBtn t-smallCloseBtn"></span></div>
+                <div class="t-cardInsideBlock t-cartItemPriceTotalSection"><span class="t-bold t-itemTotalPrice">325 000<span class="t-bold t-rubSign">₽</span></span></div>
+                <div class="t-cardInsideBlock t-cartCloseSection"><span class="t-removeFromCartBtn t-smallCloseBtn"></span></div>
               </div>
               <div class="t-cartGoodsCard">
-                <div class="t-cardInsideBlock"><img src="/images/goodimage.png" class="t-cartItemImage"/><span class="t-cartItemName">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</span></div>
-                <div class="t-cardInsideBlock"><span class="t-bold t-cartItemPrice">32 500<span class="t-bold t-rubSign">₽</span></span></div>
-                <div class="t-cardInsideBlock">
+                <div class="t-cardInsideBlock t-cardImgAndNameSection"><img src="/images/goodimage.png" class="t-cartItemImage"/><span class="t-cartItemName">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</span></div>
+                <div class="t-cardInsideBlock t-cartItemPriceOneSection"><span class="t-bold t-cartItemPrice">32 500<span class="t-bold t-rubSign">₽</span></span></div>
+                <div class="t-cardInsideBlock t-cardQuantitySection">
                   <div class="t-quantityItemCtrl">
                     <button class="t-quantityBtn t-quantityDown"></button>
                     <input value="10" class="t-quantityInput"/>
                     <button class="t-quantityBtn t-quantityUp"></button>
                   </div>
                 </div>
-                <div class="t-cardInsideBlock"><span class="t-bold t-itemTotalPrice">325 000<span class="t-bold t-rubSign">₽</span></span></div>
-                <div class="t-cardInsideBlock"><span class="t-removeFromCartBtn t-smallCloseBtn"></span></div>
+                <div class="t-cardInsideBlock t-cartItemPriceTotalSection"><span class="t-bold t-itemTotalPrice">325 000<span class="t-bold t-rubSign">₽</span></span></div>
+                <div class="t-cardInsideBlock t-cartCloseSection"><span class="t-removeFromCartBtn t-smallCloseBtn"></span></div>
               </div>
             </div>
           </div>
         </section>
-        <section class="t-bottomInfo">
-          <div class="t-bottomInfoCardsHolder">
-            <div class="t-bottomInfoCard">
-              <div class="t-bottomInfoCardImage"><img src="/images/bottominfo/wallet.png"/></div>
-              <div class="t-bottomInfoCardInfo">
-                <h3 class="t-bottomInfoCardTitle">Оплата</h3>
-                <p class="t-bottomInfoCardDescription">Несколько вариантов оплаты, в том числе и оплата электронными деньгами</p>
-              </div>
-            </div>
-            <div class="t-bottomInfoCard">
-              <div class="t-bottomInfoCardImage"><img src="/images/bottominfo/rocket.png"/></div>
-              <div class="t-bottomInfoCardInfo">
-                <h3 class="t-bottomInfoCardTitle">Доставка</h3>
-                <p class="t-bottomInfoCardDescription">Несколько вариантов доставки на ваш выбор или самомвывоз</p>
-              </div>
-            </div>
-            <div class="t-bottomInfoCard">
-              <div class="t-bottomInfoCardImage"><img src="/images/bottominfo/guarantee.png"/></div>
-              <div class="t-bottomInfoCardInfo">
-                <h3 class="t-bottomInfoCardTitle">Гарантия</h3>
-                <p class="t-bottomInfoCardDescription">Несколько вариантов оплаты, в том числе и оплата электронными деньгами</p>
-              </div>
-            </div>
-            <div class="t-bottomInfoCard">
-              <div class="t-bottomInfoCardImage"><img src="/images/bottominfo/tools.png"/></div>
-              <div class="t-bottomInfoCardInfo">
-                <h3 class="t-bottomInfoCardTitle">Ремонт</h3>
-                <p class="t-bottomInfoCardDescription">Проверим устройство на неисправность и отремонтируем</p>
-              </div>
-            </div>
-          </div>
-        </section>
+        <section class="t-bottomInfo"></section>
       </main>
       <footer id="footer">
         <div class="t-moonGradient"></div>
@@ -349,6 +320,7 @@
     </div>
     <script src="/js/vendor.min.js"></script>
     <script src="/js/plugins/owl.carousel.min.js"></script>
+    <script src="/js/plugins/jquery.formstyler.min.js"></script>
     <script src="/js/plugins/jquery.magnific-popup.min.js"></script>
     <script src="/js/reviewsSlider.js"></script>
     <script src="/js/main.min.js"></script>
