--- a/projects/fantatic/catalog.html
+++ b/projects/fantatic/catalog.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/css/main.min.css">
     <link rel="stylesheet" href="/css/plugins/owl.carousel.min.css">
     <link rel="stylesheet" href="/css/plugins/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/css/plugins/jquery.formstyler.css">
+    <link rel="stylesheet" href="/css/plugins/jquery.formstyler.theme.css">
     <link rel="stylesheet" href="/css/plugins/magnific-popup.css">
   </head>
   <body class="t-windowLoading fixed t-animeOne">
@@ -158,7 +160,7 @@
                 <li class="t-sortContainerLinks"><span class="t-sortArrow t-sortArrowDown">По имени</span></li>
                 <li class="t-sortContainerLinks"><span class="t-sortArrow t-sortArrowDown">По цене</span></li>
               </ul>
-              <div class="t-cardsHolder">
+              <div class="t-cardsHolder t-sliderCtrl">
                 <div class="t-goodsCard t-GoodsCardMain">
                   <div class="t-cardFigureHolder">
                     <div class="t-cardFigureOne"></div>
@@ -754,6 +756,7 @@
     </div>
     <script src="/js/vendor.min.js"></script>
     <script src="/js/plugins/owl.carousel.min.js"></script>
+    <script src="/js/plugins/jquery.formstyler.min.js"></script>
     <script src="/js/plugins/jquery.magnific-popup.min.js"></script>
     <script src="/js/reviewsSlider.js"></script>
     <script src="/js/main.min.js"></script>
