--- a/projects/fantatic/goodsOrder.html
+++ b/projects/fantatic/goodsOrder.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/css/main.min.css">
     <link rel="stylesheet" href="/css/plugins/owl.carousel.min.css">
     <link rel="stylesheet" href="/css/plugins/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/css/plugins/jquery.formstyler.css">
+    <link rel="stylesheet" href="/css/plugins/jquery.formstyler.theme.css">
     <link rel="stylesheet" href="/css/plugins/magnific-popup.css">
   </head>
   <body class="t-windowLoading fixed t-animeOne">
@@ -227,6 +229,14 @@
               <li><a href="#characteristics">Характеристики</a></li>
               <li><a href="#reviews">Отзывы</a></li>
             </ul>
+            <div class="t-mobileTabsCtrlHoleder">
+              <select class="t-mobileTabsCtrl">
+                <option value="#description">Описание</option>
+                <option value="#characteristics">Характеристики</option>
+                <option value="#reviews">Отзывы</option>
+              </select>
+              <div class="t-arrowHolder"><img src="/images/icons/mobArrow.svg"></div>
+            </div>
             <div id="description" class="t-tabsDescription t-tabsContiner">
               <h2 class="t-sectionTitle">Первоклассные спортивные часы</h2>
               <p>Apple Watch Series 2 со встроенным GPS‑модулем позволяют оставить iPhone дома, если вы собрались бегать или ездить на велосипеде. При этом точность измерения вашей тренировки останется прежней. С ними вы можете плавать в бассейне или в море. И продолжать следить за своими показателями. Информация будет четко видна даже под прямыми солнечными лучами. Ведь теперь у вас на руке самый яркий из всех дисплеев Apple.</p>
@@ -561,7 +571,7 @@
         <section class="t-bottomInfo"></section>
       </main>
       <div class="t-reviewsDialog t-dialogCard">
-        <div class="t-closeBtn t-reviewsDialogClose"></div>
+        <div class="t-smallCloseBtn t-reviewsDialogClose"></div>
         <div class="t-reviewsHeader t-dialogCardHeader">
           <h3 class="t-dialogCardTitle">Ваша оценка</h3>
           <ul class="t-starHolder t-reviewsDialogRating">
@@ -604,6 +614,10 @@
           </form>
         </div>
         <div class="t-reviewsFooter">
+          <div class="t-checkboxHolder t-checkBoxesCtrl">
+            <input type="checkbox" id="agree" class="t-checkbox t-hideSomething">
+            <label for="agree" class="t-checkControl">Согласен на обработку данных</label>
+          </div>
           <button class="t-btn"><span>Отправить</span></button>
         </div>
       </div>
@@ -657,6 +671,7 @@
     </div>
     <script src="/js/vendor.min.js"></script>
     <script src="/js/plugins/owl.carousel.min.js"></script>
+    <script src="/js/plugins/jquery.formstyler.min.js"></script>
     <script src="/js/plugins/jquery.magnific-popup.min.js"></script>
     <script src="/js/reviewsSlider.js"></script>
     <script src="/js/main.min.js"></script>
