--- a/projects/fantatic/goodsOrder2.html
+++ b/projects/fantatic/goodsOrder2.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/css/main.min.css">
     <link rel="stylesheet" href="/css/plugins/owl.carousel.min.css">
     <link rel="stylesheet" href="/css/plugins/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/css/plugins/jquery.formstyler.css">
+    <link rel="stylesheet" href="/css/plugins/jquery.formstyler.theme.css">
     <link rel="stylesheet" href="/css/plugins/magnific-popup.css">
   </head>
   <body class="t-windowLoading fixed t-animeOne">
@@ -227,6 +229,14 @@
               <li><a href="#characteristics">Характеристики</a></li>
               <li><a href="#reviews">Отзывы</a></li>
             </ul>
+            <div class="t-mobileTabsCtrlHoleder">
+              <select class="t-mobileTabsCtrl">
+                <option value="#description">Описание</option>
+                <option value="#characteristics">Характеристики</option>
+                <option value="#reviews">Отзывы</option>
+              </select>
+              <div class="t-arrowHolder"><img src="/images/icons/mobArrow.svg"></div>
+            </div>
             <div id="description" class="t-tabsDescription t-tabsContiner">
               <h2 class="t-sectionTitle">Первоклассные спортивные часы</h2>
               <p>Apple Watch Series 2 со встроенным GPS‑модулем позволяют оставить iPhone дома, если вы собрались бегать или ездить на велосипеде. При этом точность измерения вашей тренировки останется прежней. С ними вы можете плавать в бассейне или в море. И продолжать следить за своими показателями. Информация будет четко видна даже под прямыми солнечными лучами. Ведь теперь у вас на руке самый яркий из всех дисплеев Apple.</p>
@@ -657,6 +667,7 @@
     </div>
     <script src="/js/vendor.min.js"></script>
     <script src="/js/plugins/owl.carousel.min.js"></script>
+    <script src="/js/plugins/jquery.formstyler.min.js"></script>
     <script src="/js/plugins/jquery.magnific-popup.min.js"></script>
     <script src="/js/reviewsSlider.js"></script>
     <script src="/js/main.min.js"></script>
