--- a/projects/fantatic/questions.html
+++ b/projects/fantatic/questions.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/css/main.min.css">
     <link rel="stylesheet" href="/css/plugins/owl.carousel.min.css">
     <link rel="stylesheet" href="/css/plugins/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/css/plugins/jquery.formstyler.css">
+    <link rel="stylesheet" href="/css/plugins/jquery.formstyler.theme.css">
     <link rel="stylesheet" href="/css/plugins/magnific-popup.css">
   </head>
   <body class="t-windowLoading fixed t-animeOne">
@@ -236,6 +238,7 @@
     </div>
     <script src="/js/vendor.min.js"></script>
     <script src="/js/plugins/owl.carousel.min.js"></script>
+    <script src="/js/plugins/jquery.formstyler.min.js"></script>
     <script src="/js/plugins/jquery.magnific-popup.min.js"></script>
     <script src="/js/reviewsSlider.js"></script>
     <script src="/js/main.min.js"></script>
