--- a/projects/fantatic/catalog.html
+++ b/projects/fantatic/catalog.html
@@ -143,7 +143,7 @@
           </ul>
         </div>
       </header>
-      <main>
+      <main class="t-catalogMain">
         <section class="t-catalogWrapper">
           <h2 class="t-sectionTitle"> Подарки с юмором</h2>
           <div class="t-breadCrumbs">
