--- a/projects/BitcoinAPI/index.html
+++ b/projects/BitcoinAPI/index.html
@@ -6,9 +6,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" sizes="96x96" href="img/favicon.ico">
+    <title>Bitcoin API</title>
 </head>
 <body>
+    <button class="updateData">Обновить данные</button>
     <div class="outputData">
         <h1 class="nameOfCurrency" style="text-align: center; color: #FF9900;"></h1>
         <ul class="containerControls"></ul>
