--- a/projects/jtProject/aside.html
+++ b/projects/jtProject/aside.html
@@ -13,7 +13,7 @@
       <li class="t-menuListItem"><a href="#">Бэкстейдж</a></li>
       <li class="t-menuListItem"><a href="#">Библиотека</a></li>
       <li class="t-menuListItem"><a href="#">События</a></li>
-      <li class="t-menuListItem"><a href="#">Авторы</a></li>
+      <li class="t-menuListItem"><a href="/authors.html">Авторы</a></li>
       <li class="t-menuListItem"><a href="#">Информация</a></li>
     </ul>
   </nav>
