--- a/projects/jtProject/_header.html
+++ b/projects/jtProject/_header.html
@@ -1,25 +1,22 @@
 
-<header><a href="/" class="t-logoWrapper">
-    <div class="t-logo"></div></a>
-  <div class="t-sortAndCatWrapper">
-    <ul class="t-sortContainer">
-      <li><a href="#">Всё сразу</a></li>
-      <li><a href="#">По дате</a></li>
-      <li>i</li>
-    </ul>
-    <ul class="t-categoriesContainer">
-      <li class="active"><a href="#">Все темы</a></li>
-      <li><a href="#">Дизайн</a></li>
-      <li><a href="#">Маркетинг</a></li>
-      <li><a href="#">CEO</a></li>
-      <li><a href="#">Разработка</a></li>
-      <li><a href="#">Бизнес</a></li>
-      <li>i</li>
-    </ul>
-    <ul class="t-headerButtons">
-      <li>i</li>
-      <li>I</li>
-      <li>I</li>
-    </ul>
+<div class="t-logoSection"><a href="/" class="t-logoWrapper">
+    <div class="t-logo"></div></a></div>
+<div class="t-topRightSection">
+  <div class="t-nameAndSortWrapper"><span class="t-namePage">Всё сразу</span>
+    <div class="t-topSortWrapper"><span class="t-topSortName">По дате</span><span class="t-icon">Ico</span></div>
   </div>
-</header>
+  <ul class="t-topListCtrl t-topMiddleSection">
+    <li><a href="#" class="t-topSortLinks active">Все темы</a></li>
+    <li><a href="#" class="t-topSortLinks">Дизайн</a></li>
+    <li><a href="#" class="t-topSortLinks">Маркетинг</a></li>
+    <li><a href="#" class="t-topSortLinks">CEO</a></li>
+    <li><a href="#" class="t-topSortLinks">Разработка</a></li>
+    <li><a href="#" class="t-topSortLinks">Бизнес</a></li>
+    <li><a href="#" class="t-topSortLinks">ico</a></li>
+  </ul>
+  <ul class="t-topListCtrl t-topRightSection">
+    <li>ico</li>
+    <li>ico</li>
+    <li>ico</li>
+  </ul>
+</div>
