--- a/projects/jtProject/_layout.html
+++ b/projects/jtProject/_layout.html
@@ -12,37 +12,34 @@
   </head>
   <body>
     <div class="t-mainWrapper">
-      <header><a href="/" class="t-logoWrapper">
-          <div class="t-logo"></div></a>
-        <div class="t-sortAndCatWrapper">
-          <ul class="t-sortContainer">
-            <li><a href="#">Всё сразу</a></li>
-            <li><a href="#">По дате</a></li>
-            <li>i</li>
+      <header>
+        <div class="t-logoSection"><a href="/" class="t-logoWrapper">
+            <div class="t-logo"></div></a></div>
+        <div class="t-topRightSection">
+          <div class="t-nameAndSortWrapper"><span class="t-namePage">Всё сразу</span>
+            <div class="t-topSortWrapper"><span class="t-topSortName">По дате</span><span class="t-icon">Ico</span></div>
+          </div>
+          <ul class="t-topListCtrl t-topMiddleSection">
+            <li><a href="#" class="t-topSortLinks active">Все темы</a></li>
+            <li><a href="#" class="t-topSortLinks">Дизайн</a></li>
+            <li><a href="#" class="t-topSortLinks">Маркетинг</a></li>
+            <li><a href="#" class="t-topSortLinks">CEO</a></li>
+            <li><a href="#" class="t-topSortLinks">Разработка</a></li>
+            <li><a href="#" class="t-topSortLinks">Бизнес</a></li>
+            <li><a href="#" class="t-topSortLinks">ico</a></li>
           </ul>
-          <ul class="t-categoriesContainer">
-            <li class="active"><a href="#">Все темы</a></li>
-            <li><a href="#">Дизайн</a></li>
-            <li><a href="#">Маркетинг</a></li>
-            <li><a href="#">CEO</a></li>
-            <li><a href="#">Разработка</a></li>
-            <li><a href="#">Бизнес</a></li>
-            <li>i</li>
-          </ul>
-          <ul class="t-headerButtons">
-            <li>i</li>
-            <li>I</li>
-            <li>I</li>
+          <ul class="t-topListCtrl t-topRightSection">
+            <li>ico</li>
+            <li>ico</li>
+            <li>ico</li>
           </ul>
         </div>
       </header>
-      <div class="t-contentWrapper">
-      </div>
+      <section class="t-contentWrapper">
+      </section>
     </div>
     <script src="js/vendor.min.js"></script>
     <script src="js/plugins/jquery.scrollbar.min.js"></script>
-    <script src="js/plugins/jquery.jInvertScroll.min.js"></script>
-    <script src="js/plugins/svg-injector.min.js"></script>
     <script src="js/plugins/svg4everybody.min.js"></script>
     <script src="js/main.min.js"></script>
   </body>
