--- a/projects/jtProject/aside.html
+++ b/projects/jtProject/aside.html
@@ -1,5 +1,7 @@
 
 <aside>
+  <section class="t-logoSection"><a href="/" class="t-logoWrapper">
+      <div class="t-logo"></div></a></section>
   <nav>
     <ul class="t-menuList">
       <li class="t-menuListItem"><a href="#">Всё сразу</a></li>
@@ -17,5 +19,5 @@
       <li class="t-menuListItem"><a href="#">Информация</a></li>
     </ul>
   </nav>
-  <div class="t-copyWrapper"><span>&copy; ЖТ 2018</span><br/><a href="http://tdsgn.ru/">Создано в Студии Т</a></div>
+  <section class="t-copyWrapper"><span>&copy; ЖТ 2018</span><br/><a href="http://tdsgn.ru/">Создано в Студии Т</a></section>
 </aside>
