--- a/projects/jtProject/authors.html
+++ b/projects/jtProject/authors.html
@@ -599,7 +599,14 @@
             </div>
           </div>
         </div>
-        <div class="t-authorModalPhoto"><img src="images/photos/John.png"/></div>
+        <div class="t-authorModalPhoto"><img src="images/photos/John.png"/>
+          <div class="t-modalImgOverlay">
+            <div class="t-modalButtonsHolder">
+              <div class="t-modalShare"></div>
+              <div class="t-modalBack"><span>Назад</span></div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <script src="js/vendor.min.js"></script>
