--- a/projects/jtProject/_layout.html
+++ b/projects/jtProject/_layout.html
@@ -12,31 +12,56 @@
   </head>
   <body>
     <div class="t-mainWrapper">
-      <header>
-        <div class="t-logoSection"><a href="/" class="t-logoWrapper">
-            <div class="t-logo"></div></a></div>
-        <div class="t-topRightSection">
-          <div class="t-nameAndSortWrapper"><span class="t-namePage">Всё сразу</span>
-            <div class="t-topSortWrapper"><span class="t-topSortName">По дате</span><span class="t-icon">Ico</span></div>
+      <div class="t-authorModal">
+        <div class="t-authorModalInfo">
+          <h1 class="t-authorModalName t-titleUltraLarge">Джон Тривольта</h1>
+          <h2 class="t-authorModalProfession t-titleLarge">Угонщик</h2>
+          <div class="t-authorModalCountWrapper"><span class="t-name">Статей</span><span class="t-authorArticlesCount">2</span></div>
+          <ul class="t-authorModalTags">
+            <li>Дизайн,</li>
+            <li>бизнес,</li>
+          </ul>
+          <div class="t-authorModalLikesHolder"><span>ico</span><span class="t-authorLikesCount">475</span></div>
+          <div class="t-authorModalAbout">
+            <h1 class="t-authorModalAboutTitle t-titleBig">О себе</h1>
+            <p class="t-authorModalDescription">Минкомсвязи отказалось от требования рассчитывать объём хранилищ данных пользователей на основании максимальной ширины канала операторов связи. Это должно снизить затраты операторов, пишет «Коммерсантъ» со ссылкой на копию письма замглавы Минкомсвязи Дмитрия Алхазова в Российский союз промышленников и предпринимателей (РСПП).</p>
           </div>
-          <ul class="t-topListCtrl t-topMiddleSection">
-            <li><a href="#" class="t-topSortLinks active">Все темы</a></li>
-            <li><a href="#" class="t-topSortLinks">Дизайн</a></li>
-            <li><a href="#" class="t-topSortLinks">Маркетинг</a></li>
-            <li><a href="#" class="t-topSortLinks">CEO</a></li>
-            <li><a href="#" class="t-topSortLinks">Разработка</a></li>
-            <li><a href="#" class="t-topSortLinks">Бизнес</a></li>
-            <li><a href="#" class="t-topSortLinks">ico</a></li>
-          </ul>
-          <ul class="t-topListCtrl t-topRightSection">
-            <li>ico</li>
-            <li>ico</li>
-            <li>ico</li>
-          </ul>
+          <div class="t-authorModalAnotherProfiles">
+            <ul>
+              <li><a href="#">Facebook</a></li>
+              <li><a href="#">Telegram</a></li>
+            </ul>
+          </div>
+          <div class="t-authorModalArticlesHolderWrapper">
+            <h1 class="t-authorModalAboutTitle t-titleBig">Статьи автора</h1>
+            <div class="t-authorArticlesHolder">
+              <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
+                  <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
+                  <div class="t-authorArticleCardInfo">
+                    <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
+                  </div></a></div>
+              <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
+                  <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
+                  <div class="t-authorArticleCardInfo">
+                    <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
+                  </div></a></div>
+              <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
+                  <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
+                  <div class="t-authorArticleCardInfo">
+                    <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
+                  </div></a></div>
+            </div>
+          </div>
         </div>
-      </header>
-      <section class="t-contentWrapper">
-      </section>
+        <div class="t-authorModalPhoto"><img src="images/photos/John.png"/>
+          <div class="t-modalImgOverlay">
+            <div class="t-modalButtonsHolder">
+              <div class="t-modalShare"></div>
+              <div class="t-modalBack"><span>Назад</span></div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="js/vendor.min.js"></script>
     <script src="js/plugins/jquery.scrollbar.min.js"></script>
