--- a/projects/jtProject/index.html
+++ b/projects/jtProject/index.html
@@ -15,24 +15,26 @@
       <aside>
         <section class="t-logoSection"><a href="/" class="t-logoWrapper">
             <div class="t-logo"></div></a></section>
-        <nav>
-          <ul class="t-menuList">
-            <li class="t-menuListItem"><a href="#">Всё сразу</a></li>
-            <li class="t-menuListItem"><a href="#">Статьи</a></li>
-            <li class="t-menuListItem"><a href="#">Подборки</a></li>
-            <li class="t-menuListItem"><a href="#">Кейс недели</a></li>
-            <li class="t-menuListItem"><a href="#">Переводы</a></li>
-            <li class="t-menuListItem"><a href="#">Блоги компаний</a></li>
-            <li class="t-menuListItem"><a href="#">Экспертное мнение</a></li>
-            <li class="t-menuListItem"><a href="#">Туториалы</a></li>
-            <li class="t-menuListItem"><a href="#">Бэкстейдж</a></li>
-            <li class="t-menuListItem"><a href="#">Библиотека</a></li>
-            <li class="t-menuListItem"><a href="#">События</a></li>
-            <li class="t-menuListItem"><a href="/authors.html">Авторы</a></li>
-            <li class="t-menuListItem"><a href="#">Информация</a></li>
-          </ul>
-        </nav>
-        <section class="t-copyWrapper"><span>&copy; ЖТ 2018</span><br><a href="http://tdsgn.ru/">Создано в Студии Т</a></section>
+        <div class="t-menuWrapper">
+          <nav>
+            <ul class="t-menuList">
+              <li class="t-menuListItem"><a href="#">Всё сразу</a></li>
+              <li class="t-menuListItem"><a href="#">Статьи</a></li>
+              <li class="t-menuListItem"><a href="#">Подборки</a></li>
+              <li class="t-menuListItem"><a href="#">Кейс недели</a></li>
+              <li class="t-menuListItem"><a href="#">Переводы</a></li>
+              <li class="t-menuListItem"><a href="#">Блоги компаний</a></li>
+              <li class="t-menuListItem"><a href="#">Экспертное мнение</a></li>
+              <li class="t-menuListItem"><a href="#">Туториалы</a></li>
+              <li class="t-menuListItem"><a href="#">Бэкстейдж</a></li>
+              <li class="t-menuListItem"><a href="#">Библиотека</a></li>
+              <li class="t-menuListItem"><a href="#">События</a></li>
+              <li class="t-menuListItem"><a href="/authors.html">Авторы</a></li>
+              <li class="t-menuListItem"><a href="#">Информация</a></li>
+            </ul>
+          </nav>
+          <div class="t-copyWrapper"><span>&copy; ЖТ 2018</span><br><a href="http://tdsgn.ru/">Создано в Студии Т</a></div>
+        </div>
       </aside>
       <main class="t-mainMain">
         <section class="t-mainTopContent">
@@ -819,7 +821,66 @@
           </div>
         </section>
       </main>
-      <div class="t-authorModal">
+      <div class="t-absolute t-newsModal">
+        <div class="t-newsModalInfo">
+          <div style="background-color:#57C9FA" class="t-newsColorBlock"></div>
+          <div class="t-newsInsideHolder">
+            <div class="t-modalButtonsHolder">
+              <div class="t-modalShare"></div>
+              <div class="t-modalBack"><span>Назад</span></div>
+            </div>
+            <div class="t-newsModalAuthorHolder">
+              <div class="t-flexHolder">
+                <div class="t-newsModalAuthorImg"><img src="images/photos/takeoff.jpg"/></div>
+                <div class="t-newsModalAuthorInfo">
+                  <h1 class="t-authorName">Takeoff</h1><span class="t-authorProfession">Рэпер</span>
+                </div>
+              </div>
+              <div class="t-newsModalCategory"><span>Экспертное мнение</span></div>
+              <ul class="t-authorTags t-authorTagsModal">
+                <li>Дизайн,</li>
+                <li>маркетинг,</li>
+                <li>бизнес,</li>
+                <li>CEO,</li>
+                <li>Программирование,</li>
+              </ul><span class="t-newsModalDate">14 января</span>
+              <div class="t-newsParams t-newsModalParams">
+                <ul>
+                  <li>475</li>
+                  <li>987</li>
+                  <li>340K</li>
+                  <li>2M</li>
+                </ul>
+              </div>
+            </div>
+            <h1 class="t-newsModalTitle t-titleUltraMegaLarge t-transform">Заголовок статьи, например не в одну, а в три строки</h1>
+            <div class="t-newsModalMainInfo">
+              <h2 class="t-newsModalMainInfoTitle t-titleLarge">Заголовок</h2>
+              <h3 class="t-newsModalMainInfoMidTitle t-titleBig">Подзаголовок</h3>
+              <p class="t-articleText">
+                Минкомсвязи отказалось от требования рассчитывать объём хранилищ данных пользователей на основании максимальной ширины канала операторов связи.
+                Это должно снизить затраты операторов, пишет «Коммерсантъ» со ссылкой на копию письма замглавы Минкомсвязи Дмитрия Алхазова в Российский союз промышленников и предпринимателей (РСПП).
+              </p><br/><a href="#">Ссылка</a><br/><br/><span class="t-signature">Подпись</span><br/><br/>
+              <p>Цитата</p><br/><br/>
+            </div>
+            <div class="t-newsModalImage t-transform"><img src="images/png/img.png"/>
+              <p class="t-signature">Подпись</p>
+            </div>
+            <div class="t-likeBlockWrapper">
+              <h2 class="t-likesTitle t-titleBig">Нравится ?</h2>
+              <div class="t-likesContainer">
+                <button type="button" class="t-iLikeItBtn t-btn">Мне нравится</button>
+                <div class="t-share">Share</div>
+              </div>
+            </div>
+            <div class="t-commentBlock">
+              <h2 class="t-commentsTitle t-titleBig">Обсуждение</h2>
+              <div class="t-commentsFilter"><span class="t-filterName">По популярности</span><span>ico</span></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="t-fixed t-authorModal">
         <div class="t-authorModalInfo">
           <h1 class="t-authorModalName t-titleUltraLarge">Джон Тривольта</h1>
           <h2 class="t-authorModalProfession t-titleLarge">Угонщик</h2>
@@ -862,7 +923,7 @@
         </div>
         <div class="t-authorModalPhoto"><img src="images/photos/John.png"/>
           <div class="t-modalImgOverlay">
-            <div class="t-modalButtonsHolder">
+            <div class="t-modalButtonsHolder t-hide">
               <div class="t-modalShare"></div>
               <div class="t-modalBack"><span>Назад</span></div>
             </div>
