--- a/projects/jtProject/aside.html
+++ b/projects/jtProject/aside.html
@@ -2,22 +2,24 @@
 <aside>
   <section class="t-logoSection"><a href="/" class="t-logoWrapper">
       <div class="t-logo"></div></a></section>
-  <nav>
-    <ul class="t-menuList">
-      <li class="t-menuListItem"><a href="#">Всё сразу</a></li>
-      <li class="t-menuListItem"><a href="#">Статьи</a></li>
-      <li class="t-menuListItem"><a href="#">Подборки</a></li>
-      <li class="t-menuListItem"><a href="#">Кейс недели</a></li>
-      <li class="t-menuListItem"><a href="#">Переводы</a></li>
-      <li class="t-menuListItem"><a href="#">Блоги компаний</a></li>
-      <li class="t-menuListItem"><a href="#">Экспертное мнение</a></li>
-      <li class="t-menuListItem"><a href="#">Туториалы</a></li>
-      <li class="t-menuListItem"><a href="#">Бэкстейдж</a></li>
-      <li class="t-menuListItem"><a href="#">Библиотека</a></li>
-      <li class="t-menuListItem"><a href="#">События</a></li>
-      <li class="t-menuListItem"><a href="/authors.html">Авторы</a></li>
-      <li class="t-menuListItem"><a href="#">Информация</a></li>
-    </ul>
-  </nav>
-  <section class="t-copyWrapper"><span>&copy; ЖТ 2018</span><br/><a href="http://tdsgn.ru/">Создано в Студии Т</a></section>
+  <div class="t-menuWrapper">
+    <nav>
+      <ul class="t-menuList">
+        <li class="t-menuListItem"><a href="#">Всё сразу</a></li>
+        <li class="t-menuListItem"><a href="#">Статьи</a></li>
+        <li class="t-menuListItem"><a href="#">Подборки</a></li>
+        <li class="t-menuListItem"><a href="#">Кейс недели</a></li>
+        <li class="t-menuListItem"><a href="#">Переводы</a></li>
+        <li class="t-menuListItem"><a href="#">Блоги компаний</a></li>
+        <li class="t-menuListItem"><a href="#">Экспертное мнение</a></li>
+        <li class="t-menuListItem"><a href="#">Туториалы</a></li>
+        <li class="t-menuListItem"><a href="#">Бэкстейдж</a></li>
+        <li class="t-menuListItem"><a href="#">Библиотека</a></li>
+        <li class="t-menuListItem"><a href="#">События</a></li>
+        <li class="t-menuListItem"><a href="/authors.html">Авторы</a></li>
+        <li class="t-menuListItem"><a href="#">Информация</a></li>
+      </ul>
+    </nav>
+    <div class="t-copyWrapper"><span>&copy; ЖТ 2018</span><br/><a href="http://tdsgn.ru/">Создано в Студии Т</a></div>
+  </div>
 </aside>
