--- a/projects/jtProject/authors.html
+++ b/projects/jtProject/authors.html
@@ -12,28 +12,37 @@
   </head>
   <body>
     <div class="t-mainWrapper">
+      <div class="t-hiddenLogoWrapper">
+        <div class="t-burger"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/" class="t-logoWrapper">
+          <div class="t-logo"></div></a>
+        <div class="t-pageNameHolder"><span class="t-pageHiddenName"></span></div>
+      </div>
       <aside>
-        <section class="t-logoSection"><a href="/" class="t-logoWrapper">
-            <div class="t-logo"></div></a></section>
-        <div class="t-menuWrapper">
-          <nav>
-            <ul class="t-menuList">
-              <li class="t-menuListItem"><a href="#">Всё сразу</a></li>
-              <li class="t-menuListItem"><a href="#">Статьи</a></li>
-              <li class="t-menuListItem"><a href="#">Подборки</a></li>
-              <li class="t-menuListItem"><a href="#">Кейс недели</a></li>
-              <li class="t-menuListItem"><a href="#">Переводы</a></li>
-              <li class="t-menuListItem"><a href="#">Блоги компаний</a></li>
-              <li class="t-menuListItem"><a href="#">Экспертное мнение</a></li>
-              <li class="t-menuListItem"><a href="#">Туториалы</a></li>
-              <li class="t-menuListItem"><a href="#">Бэкстейдж</a></li>
-              <li class="t-menuListItem"><a href="#">Библиотека</a></li>
-              <li class="t-menuListItem"><a href="#">События</a></li>
-              <li class="t-menuListItem"><a href="/authors.html">Авторы</a></li>
-              <li class="t-menuListItem"><a href="#">Информация</a></li>
-            </ul>
-          </nav>
-          <div class="t-copyWrapper"><span>&copy; ЖТ 2018</span><br><a href="http://tdsgn.ru/">Создано в Студии Т</a></div>
+        <div class="t-asideInsideHolder">
+          <section class="t-logoSection">
+            <div class="t-burger t-mainBurger"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/" class="t-logoWrapper">
+              <div class="t-logo"></div></a>
+          </section>
+          <div class="t-menuWrapper">
+            <nav>
+              <ul class="t-menuList">
+                <li class="t-menuListItem"><a href="/">Всё сразу</a></li>
+                <li class="t-menuListItem"><a href="#">Статьи</a></li>
+                <li class="t-menuListItem"><a href="#">Подборки</a></li>
+                <li class="t-menuListItem"><a href="#">Кейс недели</a></li>
+                <li class="t-menuListItem"><a href="#">Переводы</a></li>
+                <li class="t-menuListItem"><a href="#">Блоги компаний</a></li>
+                <li class="t-menuListItem"><a href="#">Экспертное мнение</a></li>
+                <li class="t-menuListItem"><a href="#">Туториалы</a></li>
+                <li class="t-menuListItem"><a href="#">Бэкстейдж</a></li>
+                <li class="t-menuListItem"><a href="#">Библиотека</a></li>
+                <li class="t-menuListItem"><a href="#">События</a></li>
+                <li class="t-menuListItem"><a href="/authors.html">Авторы</a></li>
+                <li class="t-menuListItem"><a href="#">Информация</a></li>
+              </ul>
+            </nav>
+            <div class="t-copyWrapper"><span>&copy; ЖТ 2018</span><br><a href="http://tdsgn.ru/">Создано в Студии Т</a></div>
+          </div>
         </div>
       </aside>
       <main class="t-mainMain">
