--- a/projects/jtProject/authors.html
+++ b/projects/jtProject/authors.html
@@ -48,18 +48,30 @@
       <main class="t-mainMain">
         <section class="t-mainTopContent">
           <div class="t-mainTopContentInside">
-            <div class="t-nameAndSortWrapper"><span class="t-namePage">Авторы</span>
-              <div class="t-topSortWrapper"><span class="t-topSortName">По дате</span><span class="t-icon">Ico</span></div>
+            <div class="t-leftAndMidContentContainer">
+              <div class="t-nameAndSortWrapper"><span class="t-namePage">Авторы</span>
+                <div class="t-topSortWrapper"><span class="t-topSortName">По дате</span><span class="t-icon">Ico</span></div>
+              </div>
+              <div class="t-topListCtrlWrapper t-topMiddleSection">
+                <ul class="t-topListCtrl t-topListSorting">
+                  <li><a href="#" class="t-topSortLinks active"></a></li>
+                  <li><a href="#" class="t-topSortLinks"></a></li>
+                  <li><a href="#" class="t-topSortLinks"></a></li>
+                  <li><a href="#" class="t-topSortLinks"></a></li>
+                  <li><a href="#" class="t-topSortLinks"></a></li>
+                  <li><a href="#" class="t-topSortLinks"></a></li>
+                  <li class="t-hiddenLink"><a href="#" class="t-topSortLinks">Бизнес</a></li>
+                  <li class="t-hiddenLink"><a href="#" class="t-topSortLinks">Дизайн</a></li>
+                  <li class="t-hiddenLink"><a href="#" class="t-topSortLinks">Шняга</a></li>
+                  <li class="t-hiddenLink"><a href="#" class="t-topSortLinks">Еще</a></li>
+                  <li class="t-hiddenLink"><a href="#" class="t-topSortLinks">Дичь</a></li>
+                  <li class="t-hiddenLink"><a href="#" class="t-topSortLinks">Дичь2</a></li>
+                </ul>
+                <div class="t-dotsHolder t-callHiddenSortingMenu"><span></span>
+                  <ul class="t-smallModalMenu t-sortModalContainer"></ul>
+                </div>
+              </div>
             </div>
-            <ul class="t-topListCtrl t-topMiddleSection">
-              <li><a href="#" class="t-topSortLinks active"></a></li>
-              <li><a href="#" class="t-topSortLinks"></a></li>
-              <li><a href="#" class="t-topSortLinks"></a></li>
-              <li><a href="#" class="t-topSortLinks"></a></li>
-              <li><a href="#" class="t-topSortLinks"></a></li>
-              <li><a href="#" class="t-topSortLinks"></a></li>
-              <li><a href="#" class="t-topSortLinks">ico</a></li>
-            </ul>
             <ul class="t-topListCtrl t-topRightSection">
               <li>ico</li>
               <li>ico</li>
@@ -623,7 +635,32 @@
             </div>
             <div class="t-commentBlock">
               <h2 class="t-commentsTitle t-titleBig">Обсуждение</h2>
-              <div class="t-commentsFilter"><span class="t-filterName">По популярности</span><span>ico</span></div>
+              <div class="t-commentsFilter"><span class="t-filterName">По популярности</span>
+                <div class="t-dotsHolder"><span></span></div>
+              </div>
+              <div class="t-commentsContent">
+                <div class="t-commentsItem">
+                  <div class="t-commentsiItemMain">
+                    <div class="t-commentsAuthorHolder">
+                      <div class="t-commentsAuthor">
+                        <div class="t-commentsAuthorImg"><img src="/images/photos/quavo.jpg"/></div>
+                        <div class="t-commentsAuthorInfo">
+                          <h3 class="t-commentsAuthorName">Quavious Marshall</h3>
+                          <div class="t-commentsAuthorDateAnditemHolder"><span class="t-commentsAuthorDate">24.04.17,</span><span class="t-commentsAuthorTime">15:30</span>
+                            <div class="t-commentsAuthorAnswerTo"><span class="t-commentsAuthorAnswerToName">Константин</span></div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="t-commentsRating"></div>
+                    </div>
+                    <div class="t-commentsCommentHolder">
+                      <p class="t-commentOutput">Очень люблю материалы этого чувака. Потом мы узнаем, что ему руку ампутировали из-за гангрены, когда он решит сделать себе руки-базуки.</p>
+                    </div>
+                    <div class="t-commentAnswer"><a href="#" class="t-commentsAnswerBtn">Ответить</a></div>
+                  </div>
+                  <div class="t-commentsiItemChildren"></div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
